[package]
name = "dungeons_sweeper"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = ["dungeons_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = "0.18.1"

dungeons_plugin = { path = "dungeons_plugin"}

bevy-inspector-egui = { version = "0.36.0", optional = true}
bevy_egui = "0.39.1"

[workspace]
members = [
    "dungeons_plugin"
]
