[package]
name = "dungeons_plugin"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]
bevy = "0.18.1"
dirs = "6"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

bevy-inspector-egui = { version = "0.33.1", optional = true}
rand = "0.9.2"

colored = { version = "3.0.0", optional = true }
